<resources>
    <string name="app_name">Android Design Library Adelchi</string>
    <string name="title_activity_main">Design Library</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="nav_item1">Design</string>
    <string name="nav_item2">Elements</string>
    <string name="nav_item3">Tab Exemple</string>
    <string name="nav_item4">Collapsing Toolbar</string>
    <string name="nav_item5">Transitions</string>
    <string name="nav_item6">Item 6</string>
    <string name="Apri">Apri</string>
    <string name="Chiudi">Chiudi</string>
    <string name="navigation_drawer_header">HEADER</string>
    <string name="fragment_text">Elemento Selezionato</string>
    <string name="fragment_text_inserted">Nessun elemento selezionato</string>

    <string name="hello_blank_fragment">Fragment</string>
    <string name="insertName">Inserisci il tuo nome</string>
    <string name="insertSurname">Inserisci il tuo cognome</string>
    <string name="field_empty">Il campo non può essere vuoto</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="title_activity_collapsing_toolbar">CollapsingToolbarActivity</string>
    <string name="title_activity_transition">TransitionActivityA</string>
    <string name="title_activity_transition_activity_b">TransitionActivityB</string>
</resources>
