<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item_1"
            android:icon="@android:drawable/ic_menu_today"
            android:title="@string/nav_item1">
            <menu>
                <item
                    android:id="@+id/nav_item_2"
                    android:icon="@android:drawable/btn_star_big_on"
                    android:title="@string/nav_item2" />
                <item
                    android:id="@+id/nav_item_3"
                    android:icon="@android:drawable/ic_menu_delete"
                    android:title="@string/nav_item3" />
            </menu>
        </item>

        <item
            android:id="@+id/nav_item_4"
            android:icon="@android:drawable/ic_menu_today"
            android:title="@string/nav_item4" />
    </group>
    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item_5"
            android:icon="@android:drawable/ic_menu_today"
            android:title="@string/nav_item5" />
        <item
            android:id="@+id/nav_item_6"
            android:icon="@android:drawable/ic_menu_today"
            android:title="@string/nav_item6" />
    </group>
</menu>