<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.adelchi.androiddesignlibraryadelchi.ContentElement">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/textContentFrag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello_blank_fragment" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/insertNameTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textContentFrag">

            <EditText
                android:id="@+id/insertName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/insertName" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/insertSurnameTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/insertNameTextInput">

            <EditText
                android:id="@+id/insertSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/insertSurname" />

        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>
    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabClean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="@dimen/codelab_fab_margin_bottom"
            android:layout_marginEnd="@dimen/codelab_fab_margin_right"
            android:layout_marginRight="@dimen/codelab_fab_margin_right"
            android:src="@android:drawable/ic_menu_delete"
            app:borderWidth="2dp"
            app:fabSize="normal"
            app:rippleColor="@color/colorPrimaryDark" />

    </android.support.design.widget.CoordinatorLayout>
</RelativeLayout>